# haskus-system-templates

default/: my-system.cabal  stack.yaml  system.yaml
