name:                my-system
version:             0.1.0.0
author:              John Smith
maintainer:          john@smith.com
build-type:          Simple
cabal-version:       >=1.10

executable my-system
   main-is: Main.hs
   hs-source-dirs: src
   build-depends:
         base >=4.9
      ,  haskus-system
   default-language:    Haskell2010
   ghc-options: -Wall -static -threaded
   cc-options: -static
   ld-options: -static -pthread
   extra-lib-dirs: ./.system-work/lib/
