cabal-version:       2.2
name:                my-system
version:             0.1.0.0
author:              Sylvain Henry
maintainer:          sylvain@haskus.fr
build-type:          Simple

executable my-system
   main-is: Main.hs
   hs-source-dirs: src
   build-depends:
         base >=4.9 && < 5
      ,  haskus-system
      ,  haskus-utils
   default-language:    Haskell2010
   ghc-options: -Wall -static -threaded
   cc-options: -static
   ld-options: -static -pthread
   extra-lib-dirs: ./.system-work/lib/
